调整文章贴图路径 修改作者

--- a/_posts/2025-12-24-我的第一篇文章.md
+++ b/_posts/2025-12-24-我的第一篇文章.md
@@ -1,10 +1,9 @@
 ---
 layout: post
 title: 我的第一篇文章
-image: "https://github.com/HaoNaN9279/HaoNaN9279.github.io/main/assets/images/logo.ico"
-author: Me
+image: "https://github.com/HaoNaN9279/HaoNaN9279.github.io/main/assets/images/main.png"
+author: HaoNaN
 ---
-
 尝试发布我的第一篇文章。  
 
 以后如果有什么新的想法，不定时在这里写文章更新。  
