调整文章贴图路径

--- a/_posts/2025-12-24-我的第一篇文章.md
+++ b/_posts/2025-12-24-我的第一篇文章.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 我的第一篇文章
-image: "https://github.com/HaoNaN9279/HaoNaN9279.github.io/main/assets/images/main.png"
+image: "/assets/images/main.png"
 author: HaoNaN
 ---
 尝试发布我的第一篇文章。  
